[package]
name = "pmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
byte_string = "1.0.0"
num = "0.4.0"
num-primes = "0.3.0"
